--- a/src/api/CMakeLists.txt
+++ b/src/api/CMakeLists.txt
@@ -2,10 +2,9 @@ add_library(tiro_api_objects OBJECT
     api.cpp
     ${PROJECT_SOURCE_DIR}/include/tiro/api.h
 )
+
 target_link_libraries(tiro_api_objects PUBLIC tiro_objects)
-target_include_directories(tiro_api_objects PUBLIC "${PROJECT_SOURCE_DIR}/include")
-target_include_directories(tiro_api_objects PRIVATE "${PROJECT_SOURCE_DIR}/src")
-target_compile_options(tiro_api_objects PRIVATE ${GLOBAL_COMPILE_FLAGS})
+target_link_libraries(tiro_api_objects PRIVATE common_flags)
 target_compile_definitions(tiro_api_objects PRIVATE "TIRO_BUILDING_DLL")
 
 # TODO: apparently the public object dependency (link to tiro_objects) is not propagated...
@@ -13,12 +12,12 @@ target_compile_definitions(tiro_api_objects PRIVATE "TIRO_BUILDING_DLL")
 
 # TODO: Strip all unexported symbols from c api
 add_library(tiro STATIC)
+target_link_libraries(tiro PRIVATE common_flags)
 target_link_libraries(tiro PRIVATE tiro_objects tiro_api_objects)
-target_include_directories(tiro PUBLIC "${PROJECT_SOURCE_DIR}/include")
 
 add_library(tiro_dyn SHARED)
+target_link_libraries(tiro_dyn PRIVATE common_flags)
 target_link_libraries(tiro_dyn PRIVATE tiro_objects tiro_api_objects)
-target_include_directories(tiro_dyn PUBLIC "${PROJECT_SOURCE_DIR}/include")
 
 if((CMAKE_CXX_COMPILER_ID MATCHES "GNU") OR (CMAKE_CXX_COMPILER_ID MATCHES "Clang"))
     target_link_libraries(tiro_dyn PRIVATE "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/api.version.gcc")
