--- a/src/tiro/mir/CMakeLists.txt
+++ b/src/tiro/mir/CMakeLists.txt
@@ -1,9 +1,17 @@
 target_sources(tiro_objects
     PRIVATE
         fwd.hpp
-        transform.cpp
-        transform.hpp        
+        
+        closures.cpp
+        closures.hpp
+        transform_expr.cpp
+        transform_expr.hpp
+        transform_func.cpp
+        transform_func.hpp
+        transform_module.cpp
+        transform_module.hpp
+        transform_stmt.cpp
+        transform_stmt.hpp
         types.cpp
         types.hpp
-        vec_ptr.hpp
 )
