--- a/test/compiler/CMakeLists.txt
+++ b/test/compiler/CMakeLists.txt
@@ -3,5 +3,6 @@ target_sources(tiro_tests
         source_map_test.cpp
         string_table_test.cpp
         utils_test.cpp
+        vec_ptr_test.cpp
 )
 
