Start working on the new mir datastructures.

--- a/src/tiro/CMakeLists.txt
+++ b/src/tiro/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(codegen)
 add_subdirectory(compiler)
 add_subdirectory(core)
 add_subdirectory(heap)
+add_subdirectory(mir)
 add_subdirectory(modules)
 add_subdirectory(objects)
 add_subdirectory(semantics)
