--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(codegen)
 add_subdirectory(compiler)
 add_subdirectory(core)
 add_subdirectory(heap)
+add_subdirectory(mir)
 add_subdirectory(objects)
 add_subdirectory(semantics)
 add_subdirectory(syntax)
