Implement dominance trees and cfg traversals.

--- a/src/tiro/core/CMakeLists.txt
+++ b/src/tiro/core/CMakeLists.txt
@@ -7,8 +7,8 @@ target_sources(tiro_objects
         defs.cpp
         defs.hpp
         fix.hpp
-        format_stream.cpp
-        format_stream.hpp
+        format.cpp
+        format.hpp
         function_ref.hpp
         hash.hpp
         id_type.hpp
@@ -19,7 +19,6 @@ target_sources(tiro_objects
         overloaded.hpp
         ref_counted.cpp
         ref_counted.hpp
-        range_utils.hpp
         safe_int.hpp
         scope.hpp
         span.hpp
