--- a/test/mir/CMakeLists.txt
+++ b/test/mir/CMakeLists.txt
@@ -1,6 +1,11 @@
 target_sources(tiro_tests
     PRIVATE
+        test_function.hpp
+
+        critical_edges_test.cpp
+        dominators_test.cpp
         eval_test.cpp
+        traversal_test.cpp
         transform_test.cpp
         types_test.cpp
 )
