Use liveness information to allocate locals.

--- a/src/tiro/ir/CMakeLists.txt
+++ b/src/tiro/ir/CMakeLists.txt
@@ -10,6 +10,8 @@ target_sources(tiro_objects
         dead_code_elimination.hpp
         dominators.cpp
         dominators.hpp
+        liveness.cpp
+        liveness.hpp
         locals.cpp
         locals.hpp
         traversal.cpp
