Consistent naming for bytecode classes.

--- a/src/tiro/bytecode/CMakeLists.txt
+++ b/src/tiro/bytecode/CMakeLists.txt
@@ -8,6 +8,6 @@ target_sources(tiro_objects
         instruction.hpp
         module.cpp
         module.hpp
-        opcode.cpp
-        opcode.hpp
+        op.cpp
+        op.hpp
 )
