--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(bytecode)
 add_subdirectory(bytecode_gen)
 add_subdirectory(compiler)
 add_subdirectory(core)
+add_subdirectory(eval)
 add_subdirectory(heap)
 add_subdirectory(ir)
 add_subdirectory(ir_gen)
