--- a/src/tiro/ast/CMakeLists.txt
+++ b/src/tiro/ast/CMakeLists.txt
@@ -2,10 +2,14 @@ target_sources(tiro_objects
     PRIVATE
         fwd.hpp
 
-        ast.hpp
         ast.cpp
+        ast.hpp
         operators.cpp
         operators.hpp
         traversal.cpp
         traversal.hpp
+        token_types.cpp
+        token_types.hpp
+        token.cpp
+        token.hpp
 )
