--- a/src/tiro/ast/CMakeLists.txt
+++ b/src/tiro/ast/CMakeLists.txt
@@ -2,6 +2,9 @@ target_sources(tiro_objects
     PRIVATE
         fwd.hpp
 
+        ast.hpp
+        decl.cpp
+        decl.hpp
         expr.cpp
         expr.hpp
         item.cpp
