--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,6 +1,14 @@
-autopep8==1.5
+appdirs==1.4.3
+attrs==19.3.0
+autopep8==1.5.2
+black==19.10b0
+click==7.1.2
 cogapp==3.0.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+pathspec==0.8.0
 pkg-resources==0.0.0
 pycodestyle==2.5.0
+regex==2020.5.7
+toml==0.10.0
+typed-ast==1.4.1
