--- a/include/tiro/api.h.in
+++ b/include/tiro/api.h.in
@@ -5,6 +5,10 @@
 #include <stddef.h>
 #include <stdint.h>
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 #if defined(_WIN32) || defined(__CYGWIN__)
 #    ifdef TIRO_BUILDING_DLL
 #        ifdef __GNUC__
@@ -31,9 +35,42 @@
 #    define TIRO_WARN_UNUSED
 #endif
 
-#ifdef __cplusplus
-extern "C" {
-#endif
+/**
+ * Tiro uses semantic versioning. The version number is incremented for every api change.
+ * The following macro constructs a single version number by combining the major, minor and
+ * patch version parts. The final version number supports comparison through relational operators.
+ * 
+ * Note that the individual version number parts must be smaller than 1000.
+ */
+#define TIRO_MAKE_VERSION(major, minor, patch) \
+    (uint32_t)((major) *1000000 + (minor) *1000 + (patch))
+
+/* clang-format off */
+
+/** 
+ * The compile time version of this library, as a number.
+ */
+#define TIRO_VERSION_NUMBER TIRO_MAKE_VERSION(@PROJECT_VERSION_MAJOR@, @PROJECT_VERSION_MINOR@, @PROJECT_VERSION_PATCH@)
+
+/** 
+ * The compile time version of this library, as a human readable string.
+ */
+#define TIRO_VERSION "@PROJECT_VERSION@"
+
+/* clang-format on */
+
+/** 
+ * Returns the value of `TIRO_VERSION_NUMBER` at the time the library was built. This may be different
+ * than the value observed in `TIRO_VERSION_NUMBER` if the application uses a different library version
+ * than it was originally compiled with.
+ */
+uint32_t tiro_version_number();
+
+/** 
+ * The value of `TIRO_VERSION` at the time the library was built. The returned string points into static storage
+ * and must not be modified.
+ */
+const char* tiro_version();
 
 typedef struct tiro_compiler tiro_compiler;
 typedef struct tiro_module tiro_module;
@@ -236,7 +273,7 @@ typedef struct tiro_compiler_settings {
      * the `tiro_compiler_dump_bytecode` function. */
     bool enable_dump_bytecode;
 
-    // TODO: Skip codegen flag
+    /* TODO: Skip codegen flag */
 
     /* Userdata pointer that will be passed to message_callback. Defaults to NULL. */
     void* message_callback_data;
