Update parser tests.

--- a/src/tiro/ir_gen/CMakeLists.txt
+++ b/src/tiro/ir_gen/CMakeLists.txt
@@ -8,6 +8,8 @@ target_sources(tiro_objects
         const_eval.hpp
         support.cpp
         support.hpp
+        gen_decl.cpp
+        gen_decl.hpp
         gen_expr.cpp
         gen_expr.hpp
         gen_func.cpp
