--- a/src/tiro/ir_gen/CMakeLists.txt
+++ b/src/tiro/ir_gen/CMakeLists.txt
@@ -2,22 +2,22 @@ target_sources(tiro_objects
     PRIVATE
         fwd.hpp
 
+        assign.cpp
+        assign.hpp
         closures.cpp
         closures.hpp
         const_eval.cpp
         const_eval.hpp
+        expr.cpp
+        expr.hpp
+        func.cpp
+        func.hpp
+        module.cpp
+        module.hpp
+        rvalue.cpp
+        rvalue.hpp
+        stmt.cpp
+        stmt.hpp
         support.cpp
         support.hpp
-        gen_decl.cpp
-        gen_decl.hpp
-        gen_expr.cpp
-        gen_expr.hpp
-        gen_func.cpp
-        gen_func.hpp
-        gen_module.cpp
-        gen_module.hpp
-        gen_rvalue.cpp
-        gen_rvalue.hpp
-        gen_stmt.cpp
-        gen_stmt.hpp
 )
