--- a/test/eval/CMakeLists.txt
+++ b/test/eval/CMakeLists.txt
@@ -4,11 +4,11 @@ target_sources(tiro_tests
         control_flow_test.cpp
         fibonacci_test.cpp
         functions_test.cpp
+        lib.cpp
         operators_test.cpp
         modules_test.cpp
         objects_test.cpp
         order_test.cpp
         string_test.cpp
-        types_test.cpp
         variables_test.cpp
 )
