--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(tiro_tests
 
 target_link_libraries(tiro_tests PRIVATE common_flags)
 target_link_libraries(tiro_tests PRIVATE tiro_objects)
-target_link_libraries(tiro_tests PRIVATE catch)
+target_link_libraries(tiro_tests PRIVATE Catch2::Catch2)
 target_include_directories(tiro_tests PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 
 add_subdirectory(compiler)
