--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,9 @@ endif ()
 
 # The dependencies file is included rather than added via add_subdirectory because
 # otherwise, imported targets would not be visible in the other subdirectories.
+message(STATUS "### BEGIN DEPENDENCIES ###")
 include(deps/Dependencies.cmake)
+message(STATUS "### END DEPENENCIES ###")
 
 #find_program(
 #    CLANG_TIDY_EXE
