--- a/.travis.yml
+++ b/.travis.yml
@@ -1,45 +1,29 @@
-language: minimal
-matrix:
+language: generic
+os: linux
+dist: bionic
+jobs:
     include:
-        - os: linux
-          dist: bionic
-          language: minimal
-          addons:
+        - addons:
               apt:
                   sources:
                       - sourceline: "ppa:ubuntu-toolchain-r/test"
                       - sourceline: "deb https://apt.kitware.com/ubuntu/ bionic main"
                         key_url: "https://apt.kitware.com/keys/kitware-archive-latest.asc"
-                  packages:
-                      - build-essential
-                      - g++-8
-                      - cmake
-                      - ninja-build
-          env:
-              - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
-        - os: linux
-          dist: bionic
-          language: minimal
-          addons:
+                  packages: [build-essential, g++-8, cmake, ninja-build]
+          env: ["CC=gcc-8", "CXX=g++-8"]
+        - addons:
               apt:
                   sources:
                       - sourceline: "ppa:ubuntu-toolchain-r/test"
                       - sourceline: "deb https://apt.kitware.com/ubuntu/ bionic main"
                         key_url: "https://apt.kitware.com/keys/kitware-archive-latest.asc"
-                  packages:
-                      - build-essential
-                      - g++-8
-                      - clang-9
-                      - cmake
-                      - ninja-build
-          env:
-              - MATRIX_EVAL="CC=clang-9 && CXX=clang++-9"
+                  packages: [build-essential, g++-8, clang-9, cmake, ninja-build]
+          env: ["CC=clang-9", "CXX=clang++-9"]
 branches:
     only:
         - master
-before_install:
-    - eval "${MATRIX_EVAL}"
 script:
+    - "echo C-COMPILER: ${CC}, CXX-COMPILER: ${CXX}"
     - /usr/bin/cmake . -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_BUILD_TYPE=Debug -DTIRO_TESTS=1 -DTIRO_WARNINGS=1 -DTIRO_WERROR=1 -G Ninja
     - /usr/bin/cmake --build .
     - ./bin/tiro_tests
