--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,92 @@
 language: generic
-os: linux
-dist: bionic
+cache:
+    directories: ["build/_deps"]
+    apt: true
 jobs:
     include:
-        - addons:
+        - os: linux
+          dist: bionic
+          addons:
               apt:
                   sources:
                       - sourceline: "ppa:ubuntu-toolchain-r/test"
                       - sourceline: "deb https://apt.kitware.com/ubuntu/ bionic main"
                         key_url: "https://apt.kitware.com/keys/kitware-archive-latest.asc"
                   packages: [build-essential, g++-8, cmake, ninja-build]
-          env: ["CC=gcc-8", "CXX=g++-8"]
-        - addons:
+          env:
+              - "BUILD_ID=gcc-8"
+              - "CC=gcc-8"
+              - "CXX=g++-8"
+              - "CMAKE=/usr/bin/cmake"
+              - "CMAKE_GENERATOR=Ninja"
+
+        - os: linux
+          dist: bionic
+          addons:
+              apt:
+                  sources:
+                      - sourceline: "ppa:ubuntu-toolchain-r/test"
+                      - sourceline: "deb https://apt.kitware.com/ubuntu/ bionic main"
+                        key_url: "https://apt.kitware.com/keys/kitware-archive-latest.asc"
+                  packages: [build-essential, g++-9, cmake, ninja-build]
+          env:
+              - "BUILD_ID=gcc-9"
+              - "CC=gcc-9"
+              - "CXX=g++-9"
+              - "CMAKE=/usr/bin/cmake"
+              - "CMAKE_GENERATOR=Ninja"
+
+        - os: linux
+          dist: bionic
+          addons:
               apt:
                   sources:
                       - sourceline: "ppa:ubuntu-toolchain-r/test"
                       - sourceline: "deb https://apt.kitware.com/ubuntu/ bionic main"
                         key_url: "https://apt.kitware.com/keys/kitware-archive-latest.asc"
                   packages: [build-essential, g++-8, clang-9, cmake, ninja-build]
-          env: ["CC=clang-9", "CXX=clang++-9"]
+          env:
+              - "BUILD_ID=clang-9"
+              - CC=clang-9"
+              - "CXX=clang++-9"
+              - "CMAKE=/usr/bin/cmake"
+              - "CMAKE_GENERATOR=Ninja"
+
+        - os: linux
+          dist: bionic
+          addons:
+              apt:
+                  sources:
+                      - sourceline: "ppa:ubuntu-toolchain-r/test"
+                      - sourceline: "deb https://apt.kitware.com/ubuntu/ bionic main"
+                        key_url: "https://apt.kitware.com/keys/kitware-archive-latest.asc"
+                  packages: [build-essential, g++-9, clang-10, cmake, ninja-build]
+          env:
+              - "BUILD_ID=clang-10"
+              - "CC=clang-10"
+              - "CXX=clang++-10"
+              - "CMAKE=/usr/bin/cmake"
+              - "CMAKE_GENERATOR=Ninja"
+
+        - os: osx
+          osx_image: xcode11
+          addons:
+              homebrew:
+                  update: false
+                  packages: [cmake, ninja]
+          env:
+              - "BUILD_ID=osx"
+              - "CMAKE=cmake"
+              - 'CMAKE_GENERATOR="Unix Makefiles"'
+              - "MACOSX_DEPLOYMENT_TARGET=10.15"
+
 branches:
     only:
         - master
 script:
-    - "echo C-COMPILER: ${CC}, CXX-COMPILER: ${CXX}"
-    - /usr/bin/cmake . -DCMAKE_C_COMPILER=${CC} -DCMAKE_CXX_COMPILER=${CXX} -DCMAKE_BUILD_TYPE=Debug -DTIRO_TESTS=1 -DTIRO_WARNINGS=1 -DTIRO_WERROR=1 -G Ninja
-    - /usr/bin/cmake --build .
+    - mkdir -p build && cd build
+    - ${CMAKE} .. -DCMAKE_BUILD_TYPE=Debug -DTIRO_TESTS=1 -DTIRO_WARNINGS=1 -DTIRO_WERROR=1 -G "${CMAKE_GENERATOR}"
+    - ${CMAKE} --build . -j $(nproc)
     - ./bin/tiro_tests
 notifications:
     email: false
-env:
-    global:
-        - LANG="en_US.UTF-8"
